# qengine

./: .gitignore  CLAUDE.md  CMakeLists.txt  DFLASH_PERF_FINDINGS.md  LICENSE  README.ko.md  README.md  bench_curl.sh  bench_prefill_sweep.sh  launch_bench.sh  router.py  run.py  run_18k_bench.sh  run_9b.sh
docs/: kvgen_multigpu_plan.md
profiles/: 27B_block_sparse.csv  27B_v2.csv  27B_v3.csv  27B_v4.csv  9B_block_sparse.csv  9B_v2.csv  9B_v3.csv
scripts/: extract_4090.sh  launch_all.sh
src/: attention.cuh  dequant.cuh  dflash_ddtree.cuh  dflash_decode.cuh  dflash_draft.cuh  gdn_kernels.cuh  gemma_model.cuh  gguf.h  gpu_loader.h  json_grammar.h  main.cpp  main.cu  model.cuh  mtp_head.cuh  ops.cuh  q8_0_gemm.cuh  quant_gemv.cuh  quant_gemv.cuh.working2  sampling.h  scheduler.h  server.h  test_json_grammar.cpp  tokenizer.h  turboquant.cuh  vision.cuh
src/sparse_attn/: block_sparse.cuh  (+4 more)
tools/: 9b_watchdog.sh  bench_attn_decode  bench_attn_decode.cu  bench_hbm_bandwidth  bench_hbm_bandwidth.cu  bench_hfma2_gemm.cu  bench_launch_overhead.cu  bench_mlp_gemm.cu  bench_pcie_xfer  bench_pcie_xfer.cu  bench_tp_allreduce  bench_tp_allreduce.cu  calibration_prompt.txt  cb_prefix_test.py  cb_stream_test.py  cb_test.py  check_cooperative  check_cooperative.cu  concur_probe.cu  dflash_attn_bench.cu  dump_gguf.cpp  dump_gguf_meta.py  fa_bench  fa_bench.cu  fa_bench_64  fa_bench_80  fa_bench_96  fa_dev  fa_dev.cu  fa_occ  fa_occ.cu  gdn_dev  gdn_dev.cu  gdn_kernel_test.cu  gemm_dev  gemm_dev.cu  kvgen_embed_bench.cu  needle_haystack.py  preprocess_image.py  profA2_embed_disambig.sh  (+8 more)
(+1 files in other folders)
